kdelibs (4:2.2.0-final-1) unstable; urgency=low
 
  * New upstream version 2.2
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 30 Jul 2001 00:01:00 -0700

kdelibs (4:2.2.0-0.1beta1-2) unstable; urgency=low
 
  * synce with upstream
  * more https related fixes
  * Fix shlibs
  * Fix build issues with new libxml2-dev (Closes: #106766)
  * fix postrm of kdelibs-dev
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Fri, 27 Jul 2001 12:18:00 -0700

kdelibs (4:2.2.0-0.1beta1-1) unstable; urgency=low
 
  * synce with upstream
  * Drop optimization down for cross arch building
  * Move libkscreensaver.so over to -dev package where it belongs
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Wed, 25 Jul 2001 03:35:00 -0700

kdelibs (4:2.2.0-0beta1-6) unstable; urgency=low
 
  * synce with upstream
  * Update debhelper templates for alpha build bits
  * Update/Clean/Fix various dependency issues
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 08 Jul 2001 00:53:00 -0700

kdelibs (4:2.2.0-0beta1-5) unstable; urgency=low
 
  * synce with upstream
  * Add -mieee for Alpha builds
  * Add Recommends for aspell | ispell
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Sat, 07 Jul 2001 00:57:00 -0700

kdelibs (4:2.2.0-0beta1-4) unstable; urgency=low
 
  * synce with upstream
  * Remove old pam bit (Closes: #103493)
  * Fix http proxy support
  * More js fixes
  * Update standards version
  * Re-establish shlibs for libarts (Closes: #103655)

 -- Ivan E. Moore II <rkrusty@debian.org>  Wed, 04 Jul 2001 14:37:00 -0700

kdelibs (4:2.2.0-0beta1-3) unstable; urgency=low
 
  * Fix description (Closes: #103206)
  * Sync with upstream
  * Update build-depends
  * don't compress .bz2 files (Closes: #103262)
  * Use dpkg-divert instead of alternatives
 
 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 02 Jul 2001 13:18:00 -0700

kdelibs (4:2.2.0-0beta1-2) unstable; urgency=low
 
  * Move over a cups file that didn't get into -cups package
  * Fix alsa-stamp build location